--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <html>
+ <head>
+  <style>
+   h1 {
+    font-size: 12
+   }
+  </style>
+ </head>
  <body>
- <h1>Hello world</h1>
+ 
  </body>
 </html>
