--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
  <head>
   <style>
    h1 {
-    font-size: 5px;
+    font-size: 7px;
+    text-allign: center;
+    font-family: "Lucida Console", Monaco, monospace;
    }
   </style>
  </head>
  <body>
-  <h1> Hello World </h1>
+  <h1> Dubs' Useless Applications </h1>
  </body>
 </html>
