--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    h1 {
     font-size: 7px;
     text-allign: center;
-    font-family: "Lucida Console", Monaco, monospace;
+    font-family: "Lucida Console";
    }
   </style>
  </head>
