--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <head>
   <style>
    h1 {
-    font-size: 7px;
+    font-size: 2em;
     text-allign: center;
     font-family: "Lucida Console";
    }
