--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
  <head>
   <style>
    h1 {
-    font-size: 2em;
+    font-size: 6em;
     text-allign: center;
     font-family: "Lucida Console";
+    font-weight: 100;
    }
   </style>
  </head>
