--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <head>
   <style>
    h1 {
-    font-size: 4em;
+    font-size: 40pt;
     text-allign: center;
     font-family: "Lucida Console";
     font-weight: 100;
