--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <style>
    h1 {
     font-size: 40pt;
+    margin: 0 auto;
     text-allign: center;
     font-family: "Lucida Console";
     font-weight: 100;
