--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     text-allign: center;
     font-family: "Lucida Console";
     font-weight: 100;
+    display: inline;
    }
   </style>
  </head>
