--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
  <head>
   <style>
    h1 {
-    font-size: 40pt;
     margin: 0 auto;
     text-allign: center;
     font-family: "Lucida Console";
     display: inline;
+    font-weight: 100;
+    font-size: 40pt;
    }
   </style>
  </head>
