--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     text-allign: center;
     font-family: "Lucida Console";
     font-weight: 200;
-    font-size: 40pt;
+    font-size: 40pc;
     
     display: inline;
 
