--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     text-allign: center;
     font-family: "Lucida Console";
     font-weight: 200;
-    font-size: 4pc;
+    font-size: 4;
     display: inline;
    }
   </style>
