--- a/index.html
+++ b/index.html
@@ -2,12 +2,7 @@
  <head>
   <style>
    h1 {
-    margin: 0 auto;
-    text-allign: center;
-    font-family: "Lucida Console";
-    font-weight: 200;
-    font-size: 400%;
-    display: inline;
+    font-size: 40pt;
    }
   </style>
  </head>
