--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-
+<html>
+  	<head>
+      <style>
+        h1 {
+      		font-size: 30pt;
+            font-family: "Lucida Console";
+        	font-weight: 100;
+        	text-align: center;
+        }
+      </style>
+  </head>
+  <body>
+    <h1>
+      Dubs' Useless Apps
+    </h1>
+  </body>
+</html>
