--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
    <head>
       <style>
         h1 {
-      	  font-size: 40pt;
+          font-size: 40vw;
           font-family: "Lucida Console";
           font-weight: 100;
           text-align: center;
