--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
       </style>
   </head>
   <body>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <h1>
       Dubs' Useless Apps
     </h1>
+     </meta>
   </body>
 </html>
