--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
    <head>
       <style>
         h1 {
-          font-size: 3vw;
+          font-size: 2.5vw;
           font-family: "Lucida Console";
           font-weight: 100;
           text-align: center;
@@ -10,8 +10,10 @@
       </style>
   </head>
   <body>
-    <h1>
-      Dubs' Useless Apps
-    </h1>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+		<h1>
+			Dubs' Useless Apps
+		</h1>
+	</meta>
   </body>
 </html>
