--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
           font-weight: 100;
           text-align: center;
         }
+		h3 {
+          font-size: 1vw;
+          font-family: "Lucida Console";
+          font-weight: 100;
+		  text-align: center;
+        }
       </style>
   </head>
   <body>
@@ -14,6 +20,9 @@
 		<h1>
 			Dubs' Useless Apps
 		</h1>
+		<h3>
+			<a href="index.html> Home </a>
+		</h3>
 	</meta>
   </body>
 </html>
