--- a/aboutme.html
+++ b/aboutme.html
@@ -13,12 +13,6 @@
           font-weight: 100;
 		  text-align: center;
         }
-		p#regular {
-			font-size: 0.75vw;
-			font-family: "Lucida Console";
-			font-weight: 200;
-			text-align: center;
-		}
       </style>
   </head>
   <body>
@@ -27,14 +21,11 @@
 			Dubs' Useless Apps
 		</h1>
 		<h3 id="links">
-			<a href="index.html">|- Home -|</a>
-			<a href="aboutme.html">| About Me |</a>
+			<a href="index.html">| Home |</a>
+			<a href="aboutme.html">|- About Me -|</a>
 			<a href="contact.html">| Contact Info |</a>
 			<a href="https://discord.gg/tfZYcvz" rel="noopener noreferrer" target="_blank">| Discord Link |</a>
 		</h3>
-		<p id="regular">
-		WIP - Task Automator
-		</p>
 	</meta>
   </body>
 </html>
