--- a/aboutme.html
+++ b/aboutme.html
@@ -13,6 +13,12 @@
           font-weight: 100;
 		  text-align: center;
         }
+		p#regular {
+			font-size: 1vw;
+			font-family: "Lucida Console";
+			font-weight: 200;
+			text-align: center;
+		}
       </style>
   </head>
   <body>
@@ -26,6 +32,12 @@
 			<a href="contact.html">| Contact Info |</a>
 			<a href="https://discord.gg/tfZYcvz" rel="noopener noreferrer" target="_blank">| Discord Link |</a>
 		</h3>
+		<br />
+		<br />
+		<p id="regular">
+			Hey Im dubs... If that wasn't blatantly obvious from the get go.  I enjoy programming for a hobby and hope I can make something of use to you! <bk />  Web design isnt really my specialty so I whipped up this website in like a hour just to host all my projects but Im more of a behind the scenes person.  I dont really enjoy GUI programming and I lose motivation quickly but lets hope that something good comes of this 
+		</p>
+		</p>
 	</meta>
   </body>
 </html>
