--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,12 @@
           font-weight: 100;
 		  text-align: center;
         }
+		p#regular {
+			font-size: 1vw;
+			font-family: "Lucida Console";
+			font-weight: 200;
+			text-align: center;
+		}
       </style>
   </head>
   <body>
@@ -21,11 +27,16 @@
 			Dubs' Useless Apps
 		</h1>
 		<h3 id="links">
-			<a href="index.html">|- Home -|</a>
+			<a href="index.html">| Home |</a>
 			<a href="aboutme.html">| About Me |</a>
 			<a href="contact.html">|- Contact Info -|</a>
 			<a href="https://discord.gg/tfZYcvz" rel="noopener noreferrer" target="_blank">| Discord Link |</a>
 		</h3>
+		<br />
+		<br />
+		<p id="regular">
+		My Discord is Dubs#5869 with the Kurt Cobain pfp<br />My email is dubsthedestroyer@protonmail.com <br />Thats it
+		</p>
 	</meta>
   </body>
 </html>
