--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 			font-size: 1vw;
 			font-family: "Lucida Console";
 			font-weight: 200;
-			text-align: center;
+			text-align: left;
 		}
       </style>
   </head>
