--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,47 @@
 
+<html>
+   <head>
+      <style>
+        h1#title {
+          font-size: 2.5vw;
+          font-family: "Lucida Console";
+          font-weight: 100;
+          text-align: center;
+        }
+		h3#links {
+          font-size: 1vw;
+          font-family: "Lucida Console";
+          font-weight: 100;
+		  text-align: center;
+        }
+		p#regular {
+			font-size: 1vw;
+			font-family: "Lucida Console";
+			font-weight: 200;
+			text-align: left;
+		}
+      </style>
+  </head>
+  <body>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+		<h1 id="title">
+			Dubs' Useless Apps
+		</h1>
+		<h3 id="links">
+			<a href="index.html">| Home |</a>
+      <a href="projects.html">|- Home -|</a>
+			<a href="aboutme.html">| About Me |</a>
+			<a href="contact.html">| Contact Info |</a>
+			<a href="https://discord.gg/tfZYcvz" rel="noopener noreferrer" target="_blank">| Discord Link |</a>
+		</h3>
+		<br />
+		<br />
+		<p id="regular">
+		WIP - <a href="https://github.com/DubsTheDestroyerV2/TaskAutomator"> Task Automator</a>.  This program will be used to simulate "tasks", aka. a series of inputs, recorded or specified through a editor.  It will also be able to save those tasks to a file, load a task, and edit a task file to change timings and such.  Hopefully it will be out soon on windows, the Linux version will take me a bit longer but Ill get on it as soon as the Windows is done. 
+		<br />
+		<br />
+		
+	  </p>
+	</meta>
+  </body>
+</html>
