--- a/aboutme.html
+++ b/aboutme.html
@@ -28,6 +28,7 @@
 		</h1>
 		<h3 id="links">
 			<a href="index.html">| Home |</a>
+			<a href="projects.html">| Projects |</a>
 			<a href="aboutme.html">|- About Me -|</a>
 			<a href="contact.html">| Contact Info |</a>
 			<a href="https://discord.gg/tfZYcvz" rel="noopener noreferrer" target="_blank">| Discord Link |</a>
