--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
 		<br />
 		<br />
 		<p id="regular">
-		WIP - <a href="https://github.com/DubsTheDestroyerV2/TaskAutomator"> Task Automator</a>.  This program will be used to simulate "tasks", aka. a series of inputs, recorded or specified through a editor.  It will also be able to save those tasks to a file, load a task, and edit a task file to change timings and such.  Hopefully it will be out soon on windows, the Linux version will take me a bit longer but Ill get on it as soon as the Windows is done. 
-		<br />
-		<br />
+		Welcome to the site, theres not much here yet but hopefully it will eventually be something cool.
 		
 	  </p>
 	</meta>
