--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
 		WIP - <a href="https://github.com/DubsTheDestroyerV2/TaskAutomator"> Task Automator</a>.  This program will be used to simulate "tasks", aka. a series of inputs, recorded or specified through a editor.  It will also be able to save those tasks to a file, load a task, and edit a task file to change timings and such.  Hopefully it will be out soon on windows, the Linux version will take me a bit longer but Ill get on it as soon as the Windows is done. 
 		<br />
 		<br />
-		
+			WIP - <a href="https://github.com/DubsTheDestroyerV2/JProcess"> JProcess</a>. This lib provides different kinds of pipes for multiprocessing in java
 	  </p>
 	</meta>
   </body>
