--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
    <head>
-	   <title> Dubs' Useless Sites </title>
+	   <title> Dubs' Useless Apps </title>
       <style>
         h1#title {
           font-size: 2.5vw;
