--- a/cyoa.html
+++ b/cyoa.html
@@ -4,8 +4,10 @@
     <style title="terminalcss.css"></style>
   </head>
   <body>
-    <canvas id="screen></canvas>
-    <script src="terminal.js"></script>
+    <canvas id="screen>
+    </canvas>
+    <script src="terminal.js">
+    </script>
     Thank god
   </body>
 </html>
