--- a/cyoa.html
+++ b/cyoa.html
@@ -4,10 +4,7 @@
     <style title="terminalcss.css"></style>
   </head>
   <body>
-    <canvas id="screen>
-    </canvas>
-    <script src="terminal.js">
-    </script>
-    Thank god
+    <canvas id="screen"></canvas>
+    <script src="terminal.js"></script>
   </body>
 </html>
