--- a/cyoa.html
+++ b/cyoa.html
@@ -4,7 +4,7 @@
     <style title="terminalcss.css"></style>
   </head>
   <body>
-    <canvas id="screen" />
-    <script src="terminal.js" />
+    <canvas id="screen"></canvas>
+    <script src="terminal.js"></script>
   </body>
 </html>
