--- a/cyoa.html
+++ b/cyoa.html
@@ -4,6 +4,7 @@
     <style title="terminalcss.css"></style>
   </head>
   <body>
+    <div style="position:absolute; left: 0; top: 0; width: 100%; height: 100%; overflow: hidden" 
     <canvas id="screen"></canvas>
     <script src="terminal.js"></script>
   </body>
