--- a/cyoa.html
+++ b/cyoa.html
@@ -4,9 +4,9 @@
     <style title="terminalcss.css"></style>
   </head>
   <body>
-    <div id="overlay" style="position:absolute; left: 0; top: 0; width: 100%; height: 100%; overflow: hidden">
-      <canvas id="screen"></canvas>
-      <script src="terminal.js"></script>
+    <div class="overlay" style="position:absolute; left: 0; top: 0; width: 100%; height: 100%; overflow: hidden">
+      <canvas class="screen" id="screen"></canvas>
+      <script class="screen" src="terminal.js"></script>
     </div>
   </body>
 </html>
