--- a/cyoa.html
+++ b/cyoa.html
@@ -6,7 +6,7 @@
   <body>
     <div class="overlay" style="position:absolute; left: 0; top: 0; width: 100%; height: 100%; overflow: hidden">
       <canvas class="screen" id="screen"></canvas>
-      <script class="screen" src="terminal.js"></script>
+      <script src="terminal.js"></script>
     </div>
   </body>
 </html>
