--- a/cyoa.html
+++ b/cyoa.html
@@ -4,7 +4,7 @@
     <style title="terminalcss.css"></style>
   </head>
   <body>
-    <div class="overlay" id="screen" style="position:absolute; left: 0; top: 0; width: 100%; height: 100%; overflow: hidden">
+    <div class="overlay" id="overlay" style="position:absolute; left: 0; top: 0; width: 100%; height: 100%; overflow: hidden">
       <canvas class="screen" id="screen"></canvas>
       <script src="terminal.js"></script>
     </div>
