--- a/cyoa.html
+++ b/cyoa.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div class="overlay" id="overlay" style="position:absolute; left: 0; top: 0; width: 100%; height: 100%; overflow: hidden">
-      <canvas class="screen" id="screen" width=100%; height=100%></canvas>
+      <canvas class="screen" id="screen" width="100%" height="100%"></canvas>
       <script src="terminal.js"></script>
     </div>
   </body>
