--- a/cyoa.html
+++ b/cyoa.html
@@ -4,6 +4,9 @@
     <style title="terminalcss.css"></style>
   </head>
   <body>
+    <div class="actualContent" id="actualContent">
+      Hello THere World
+    </div>
     <div class="overlay" id="overlay" style="position:absolute; left: 0; top: 0; width: 100%; height: 100%; overflow: hidden">
       <canvas class="screen" id="screen" width="100%" height="100%"></canvas>
       <script src="terminal.js"></script>
