--- a/cyoa.html
+++ b/cyoa.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style title="terminalcss.css"></style>
+    <link href="terminalcss.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div class="actualContent" id="actualContent">
