--- a/cyoa.html
+++ b/cyoa.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link href="terminalcss.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
   </head>
   <body>
     <div class="light" id="light">
