--- a/cyoa.html
+++ b/cyoa.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link href="terminalcss.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu+Mono" />  
+    <link rel="stylesheet" type="text/css" href="https://fonts.google.com/specimen/Ubuntu+Mono" />  
   </head>
   <body>
     <div class="light" id="light">
