--- a/cyoa.html
+++ b/cyoa.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="https://fonts.google.com/specimen/Ubuntu+Mono" />  
+    <style>
+      #text {
+        font-style: 'Ubuntu Mono';
+      }
+    </style>
     <link href="terminalcss.css" rel="stylesheet" type="text/css">
     <script src="terminal.js"></script>
   </head>
